# application

./: .coveralls.yml  .travis.yml  pyproject.toml  setup.cfg
bourbaki/application/: __init__.py  multiprocessing.py  paths.py
bourbaki/application/cli/: __init__.py  actions.py  decorators.py  helpers.py  main.py  signatures.py
bourbaki/application/completion/: application_bash_completion_helpers.sh  bourbaki_bash_completion_helpers.sh  compgen_python_classpaths.py  completers.py
bourbaki/application/config/: io.py  python.py
bourbaki/application/examples/: gnu_commands.py
bourbaki/application/logging/: __init__.py  analysis.py  config.py  defaults.py  interface.py  loggers.py  regexes.py
bourbaki/application/typed_io/: __init__.py  base_parsers.py  base_reprs.py  cli_complete.py  cli_nargs_.py  cli_parse.py  cli_repr_.py  config_decode.py  config_encode.py  config_repr_.py  exceptions.py  file_types.py  main.py  stdin_parse.py  utils.py
bourbaki/application/typed_io/cli/: cli_complete.py  cli_metavar_.py  cli_nargs_.py  cli_parse.py  cli_repr_.py
bourbaki/application/typed_io/config/: config_decode.py  config_encode.py  config_repr_.py  inflation.py
bourbaki/application/typed_io/stdin/: stdin_parse.py
quarantine/: test_cli.py  test_cli_nested_types.py  test_logging.py  test_typed_io_.py
tests/: _test_logging.py  _test_logutils.py  cli.py  conf.json  conf.py  conf.toml  conf.yml  custom_types.py  foo.py  greeting.py  test_cli.py  test_cli_parse.py  test_config.py  test_config_decode.py  test_config_inflation.py  test_config_python.py  test_config_repr.py  test_import.py  test_logging.py  test_typed_io_.py  test_typed_io_file_types.py
