[bumpversion]
current_version = 0.1.1
tag = True
commit = True

[bumpversion:file:bourbaki/application/__init__.py]

[bumpversion:file:version.txt]

[aliases]
test = pytest

[tool:pytest]
addopts = -v -x --cov=bourbaki/application/ --cov-report html
python_files = tests/test*.py

[metadata]
name = bourbaki.application
version = file: version.txt
namespace_packages = bourbaki
author = Matthew Hawthorn
author_email = hawthorn.matthew@gmail.com
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Code Generators
	Topic :: Utilities
	Typing :: Typed
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bourbaki-py

[options]
packages = find:
include_package_data = True
install_requires = 
	pkginfo
	cytoolz
	multipledispatch>=0.4.9
	pandas>=0.23.3
	ujson
	toml
	PyYAML>=3.12
	typing_inspect
setup_requires = 
	pytest-runner
	setuptools>=39.0
tests_require = 
	pytest
	pytest-cov
scripts = 
	bourbaki/application/completion/compgen_python_classpaths.py

[options.package_data]
* = *.sh

